UPDATING THROUGH VSCODE

--- a/main/Video_playback/movies/dune2.html
+++ b/main/Video_playback/movies/dune2.html
@@ -89,31 +89,36 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
-                              </h5>
+                              <h5>AAH Universe | Movie | Dune: Part-2</h5>
                     </div>
 
                     <div class="video-container">
+                              <!-- <div class="video-episode-container">
+
+                              </div> -->
+
                               <video class="video-file" id="myVideo" controls>
+                                        <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
                                         <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/dune-part2.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
-                                        <h5>2011 | Movie | 2h 10m</h5>
+                                        <h2>Dune: Part-2</h2>
+                                        <h5>2024 | Movie | 2h 46m</h5>
                                         <div class="content-desc">
-                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
-                                                  their effort to destroy the Dark Lord as the final battle rages on at
-                                                  Hogwarts.
+                                                  Paul Atreides unites with the Fremen while on a warpath of revenge
+                                                  against the conspirators who destroyed his family. Facing a choice
+                                                  between the love of his life and the fate of the universe, he
+                                                  endeavors to prevent a terrible future.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Adventure | Family | Fantasy</h5>
+                                                  <h5 id="gen">Action | Adventure | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.5
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -126,9 +131,9 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                        <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                         <span>
-                                                  <h4>David Yates</h4>
+                                                  <h4>Denis Villeneuve</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -140,32 +145,31 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Steve Kloves</h4>
-                                                            <h2>Writer | Director | Producer</h2>
+                                                            <h4>Denis Villeneuve</h4>
+                                                            <h2>Director | Writer | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
+                                                            <h4>Jon Spaihts</h4>
+                                                            <h2>Writer | Producer | Director</h2>
                                                   </span>
                                         </div>
                               </span>
-                              
+
                               <span>
                                         <div class="castmembers-details">
-                                                  <!-- this block of code is just for the alignment of the content  -->
-                                                  <!-- <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
-                                                  </span> -->
+                                                            <h4>Frank Herbert</h4>
+                                                            <h2>Writer | Script & Community Dept.</h2>
+                                                  </span>
                                         </div>
                               </span>
                     </div>
@@ -178,26 +182,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Daniel Radcliffe</h4>
-                                                            <h2>As Harry Potter</h2>
+                                                            <h4>Timothée Chalamet</h4>
+                                                            <h2>As Paul Atreides</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Rupert Grint</h4>
-                                                            <h2>As Ron Weasley</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Bonnie Wright</h4>
-                                                            <h2>As Ginny Weasley</h2>
+                                                            <h4>Zendaya</h4>
+                                                            <h2>As Chani</h2>
                                                   </span>
                                         </div>
 
@@ -205,52 +201,36 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Emma Watson</h4>
-                                                            <h2>As Hermione Granger</h2>
+                                                            <h4>Rebecca Ferguson</h4>
+                                                            <h2>As Jessica</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Ralph Fiennes</h4>
-                                                            <h2>As Lord Voldemort</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Maggie Smith</h4>
-                                                            <h2>As Professor Minerva McGonagall</h2>
+                                                            <h4>Florence Pugh</h4>
+                                                            <h2>As Princess Irulan</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Alan Rickman</h4>
-                                                            <h2>As Professor Severus Snape</h2>
-                                                  </span>
-                                        </div>
-                                        
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Robbie Coltrane</h4>
-                                                            <h2>As Rubeus Hagrid</h2>
+                                                            <h4>Dave Bautista</h4>
+                                                            <h2>As Beast Rabban</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/dune-part2.jpg" alt="">
                                                   <span>
-                                                            <h4>David Thewlis</h4>
-                                                            <h2>As Remus Lupin</h2>
+                                                            <h4>Austin Butler</h4>
+                                                            <h2>As Feyd-Rautha</h2>
                                                   </span>
                                         </div>
                               </span>
