--- a/main/Video_playback/movies/harrypotter7-1.html
+++ b/main/Video_playback/movies/harrypotter7-1.html
@@ -89,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
+                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-1
                               </h5>
                     </div>
 
@@ -100,20 +100,22 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                              <img class="content-image"
+                                        src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                        alt="">
 
                               <div class="content-details">
-                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
-                                        <h5>2011 | Movie | 2h 10m</h5>
+                                        <h2>Harry Potter And The Deathly Hallows: Part-1</h2>
+                                        <h5>2010 | Movie | 2h 23m</h5>
                                         <div class="content-desc">
-                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
-                                                  their effort to destroy the Dark Lord as the final battle rages on at
-                                                  Hogwarts.
+                                                  As Harry, Ron and Hermione race against time and evil to destroy the
+                                                  Horcruxes, they uncover the existence of the three most powerful
+                                                  objects in the wizarding world: the Deathly Hallows.
                                         </div>
                                         <div class="movie-details">
                                                   <h5 id="gen">Adventure | Family | Fantasy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>7.7
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -126,7 +128,8 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                        <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                  alt="">
                                         <span>
                                                   <h4>David Yates</h4>
                                                   <h2>Director | Writer | Producer</h2>
@@ -140,7 +143,8 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Steve Kloves</h4>
                                                             <h2>Writer | Director | Producer</h2>
@@ -150,14 +154,15 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>J.K. Rowling</h4>
                                                             <h2>Writer | Producer | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
-                              
+
                               <span>
                                         <div class="castmembers-details">
                                                   <!-- this block of code is just for the alignment of the content  -->
@@ -178,7 +183,8 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Daniel Radcliffe</h4>
                                                             <h2>As Harry Potter</h2>
@@ -186,7 +192,8 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Rupert Grint</h4>
                                                             <h2>As Ron Weasley</h2>
@@ -194,7 +201,8 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Bonnie Wright</h4>
                                                             <h2>As Ginny Weasley</h2>
@@ -205,7 +213,8 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Emma Watson</h4>
                                                             <h2>As Hermione Granger</h2>
@@ -213,7 +222,8 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Ralph Fiennes</h4>
                                                             <h2>As Lord Voldemort</h2>
@@ -221,25 +231,28 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
-                                                            <h4>Maggie Smith</h4>
-                                                            <h2>As Professor Minerva McGonagall</h2>
+                                                            <h4>Helena Bonham Carter</h4>
+                                                            <h2>As Bellatrix Lestrange</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Alan Rickman</h4>
                                                             <h2>As Professor Severus Snape</h2>
                                                   </span>
                                         </div>
-                                        
+
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Robbie Coltrane</h4>
                                                             <h2>As Rubeus Hagrid</h2>
@@ -247,10 +260,11 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-7.1.jpg"
+                                                            alt="">
                                                   <span>
-                                                            <h4>David Thewlis</h4>
-                                                            <h2>As Remus Lupin</h2>
+                                                            <h4>Tom Felton</h4>
+                                                            <h2>As Draco Malfoy</h2>
                                                   </span>
                                         </div>
                               </span>
