--- a/main/Video_playback/movies/venom_the_last_dance.html
+++ b/main/Video_playback/movies/venom_the_last_dance.html
@@ -89,31 +89,35 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
-                              </h5>
+                              <h5>AAH Universe | Movie | Venom: The Last Dance</h5>
                     </div>
 
                     <div class="video-container">
+                              <!-- <div class="video-episode-container">
+
+                              </div> -->
+
                               <video class="video-file" id="myVideo" controls>
-                                        <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
+                                        <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
+                                        <source src="/Trailer/venom-3.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Venom-3.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
-                                        <h5>2011 | Movie | 2h 10m</h5>
+                                        <h2>Venom: The Last Dance</h2>
+                                        <h5>2024 | Movie | 1h 50m</h5>
                                         <div class="content-desc">
-                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
-                                                  their effort to destroy the Dark Lord as the final battle rages on at
-                                                  Hogwarts.
+                                                  Eddie and Venom, on the run, face pursuit from both worlds. As
+                                                  circumstances tighten, they're compelled to make a heart-wrenching
+                                                  choice that could mark the end of their symbiotic partnership.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Adventure | Family | Fantasy</h5>
+                                                  <h5 id="gen">Action | Adventure | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>6.2
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -126,10 +130,10 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                        <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                         <span>
-                                                  <h4>David Yates</h4>
-                                                  <h2>Director | Writer | Producer</h2>
+                                                  <h4>Kelly Marcel</h4>
+                                                  <h2>Writer | Producer | Actress</h2>
                                         </span>
                               </div>
                     </div>
@@ -140,31 +144,31 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Steve Kloves</h4>
-                                                            <h2>Writer | Director | Producer</h2>
+                                                            <h4>Kelly Marcel</h4>
+                                                            <h2>Writer | Producer | Actress</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>Writer | Actor | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
-                              
+
                               <span>
                                         <div class="castmembers-details">
                                                   <!-- this block of code is just for the alignment of the content  -->
                                                   <!-- <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>Writer | Actor | Producer</h2>
                                                   </span> -->
                                         </div>
                               </span>
@@ -178,26 +182,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Daniel Radcliffe</h4>
-                                                            <h2>As Harry Potter</h2>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>As Eddie Brock / Venom</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Rupert Grint</h4>
-                                                            <h2>As Ron Weasley</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Bonnie Wright</h4>
-                                                            <h2>As Ginny Weasley</h2>
+                                                            <h4>Juno Temple</h4>
+                                                            <h2>As Dr. Teddy Paine</h2>
                                                   </span>
                                         </div>
 
@@ -205,52 +201,28 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Emma Watson</h4>
-                                                            <h2>As Hermione Granger</h2>
+                                                            <h4>Chiwetel Ejiofor</h4>
+                                                            <h2>As Strickland</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Ralph Fiennes</h4>
-                                                            <h2>As Lord Voldemort</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Maggie Smith</h4>
-                                                            <h2>As Professor Minerva McGonagall</h2>
+                                                            <h4>Rhys Ifans</h4>
+                                                            <h2>As Martin</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-3.jpg" alt="">
                                                   <span>
-                                                            <h4>Alan Rickman</h4>
-                                                            <h2>As Professor Severus Snape</h2>
-                                                  </span>
-                                        </div>
-                                        
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Robbie Coltrane</h4>
-                                                            <h2>As Rubeus Hagrid</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>David Thewlis</h4>
-                                                            <h2>As Remus Lupin</h2>
+                                                            <h4>Peggy Lu</h4>
+                                                            <h2>As Mrs. Chen</h2>
                                                   </span>
                                         </div>
                               </span>
