--- a/main/Video_playback/movies/harrypotter3.html
+++ b/main/Video_playback/movies/harrypotter3.html
@@ -89,31 +89,32 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
+                              <h5>AAH Universe | Movie | Harry Potter and The Prisoner of Azkaban
                               </h5>
                     </div>
 
                     <div class="video-container">
                               <video class="video-file" id="myVideo" controls>
-                                        <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
+                                        <source src="/Trailer/HarryPotter-3.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
-                                        <h5>2011 | Movie | 2h 10m</h5>
+                                        <h2>Harry Potter and The Prisoner of Azkaban</h2>
+                                        <h5>2004 | Movie | 2h 22m</h5>
                                         <div class="content-desc">
-                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
-                                                  their effort to destroy the Dark Lord as the final battle rages on at
-                                                  Hogwarts.
+                                                  Harry Potter, Ron and Hermione return to Hogwarts School of Witchcraft
+                                                  and Wizardry for their third year of study, where they delve into the
+                                                  mystery surrounding an escaped prisoner who poses a dangerous threat
+                                                  to the young wizard.
                                         </div>
                                         <div class="movie-details">
                                                   <h5 id="gen">Adventure | Family | Fantasy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>7.9
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -126,9 +127,10 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                        <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                  alt="">
                                         <span>
-                                                  <h4>David Yates</h4>
+                                                  <h4>Alfonso Cuarón</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -140,7 +142,8 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Steve Kloves</h4>
                                                             <h2>Writer | Director | Producer</h2>
@@ -150,14 +153,15 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>J.K. Rowling</h4>
                                                             <h2>Writer | Producer | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
-                              
+
                               <span>
                                         <div class="castmembers-details">
                                                   <!-- this block of code is just for the alignment of the content  -->
@@ -178,7 +182,8 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Daniel Radcliffe</h4>
                                                             <h2>As Harry Potter</h2>
@@ -186,7 +191,8 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Rupert Grint</h4>
                                                             <h2>As Ron Weasley</h2>
@@ -194,10 +200,11 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
-                                                            <h4>Bonnie Wright</h4>
-                                                            <h2>As Ginny Weasley</h2>
+                                                            <h4>Gary Oldman</h4>
+                                                            <h2>As Sirius Black</h2>
                                                   </span>
                                         </div>
 
@@ -205,7 +212,8 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Emma Watson</h4>
                                                             <h2>As Hermione Granger</h2>
@@ -213,15 +221,17 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
-                                                            <h4>Ralph Fiennes</h4>
-                                                            <h2>As Lord Voldemort</h2>
+                                                            <h4>James Phelps</h4>
+                                                            <h2>As Fred Weasley</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Maggie Smith</h4>
                                                             <h2>As Professor Minerva McGonagall</h2>
@@ -231,15 +241,17 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Alan Rickman</h4>
                                                             <h2>As Professor Severus Snape</h2>
                                                   </span>
                                         </div>
-                                        
+
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
                                                             <h4>Robbie Coltrane</h4>
                                                             <h2>As Rubeus Hagrid</h2>
@@ -247,10 +259,11 @@
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry-Potter-3.jpg"
+                                                            alt="">
                                                   <span>
-                                                            <h4>David Thewlis</h4>
-                                                            <h2>As Remus Lupin</h2>
+                                                            <h4>Oliver Phelps</h4>
+                                                            <h2>As George Weasley</h2>
                                                   </span>
                                         </div>
                               </span>
