--- a/main/Video_playback/movies/kingdom_of_the_planet_of_the_apes.html
+++ b/main/Video_playback/movies/kingdom_of_the_planet_of_the_apes.html
@@ -8,7 +8,6 @@
           <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sen:wght@500&display=swap"
                     rel="stylesheet">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
           <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -89,31 +88,31 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
-                              </h5>
+                              <h5>AAH Universe | Movie | Kingdome Of The Planet Of The Apes</h5>
                     </div>
 
                     <div class="video-container">
                               <video class="video-file" id="myVideo" controls>
-                                        <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
+                                        <source src="/Trailer/kingdom_of_the_planet_of_the_apes.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
-                                        <h5>2011 | Movie | 2h 10m</h5>
+                                        <h2>Bad Boys: Ride Or Die</h2>
+                                        <h5>2024 | Movie | 2h 25m</h5>
                                         <div class="content-desc">
-                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
-                                                  their effort to destroy the Dark Lord as the final battle rages on at
-                                                  Hogwarts.
+                                                  Many years after the reign of Caesar, a young ape goes on a journey
+                                                  that will lead him to question everything he's been taught about the
+                                                  past and make choices that will define a future for apes and humans
+                                                  alike.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Adventure | Family | Fantasy</h5>
+                                                  <h5 id="gen">Action | Adventure | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>6.9
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -125,13 +124,15 @@
                               Director
                     </div>
                     <div class="castmembers-director">
-                              <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                        <span>
-                                                  <h4>David Yates</h4>
-                                                  <h2>Director | Writer | Producer</h2>
-                                        </span>
-                              </div>
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
+                                                  <span>
+                                                            <h4>Wes Ball</h4>
+                                                            <h2>Director | Producer</h2>
+                                                  </span>
+                                        </div>
+                              </span>
                     </div>
 
                     <div class="content-castmembers">
@@ -140,32 +141,31 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Steve Kloves</h4>
-                                                            <h2>Writer | Director | Producer</h2>
+                                                            <h4>Josh Friedman</h4>
+                                                            <h2>Writer | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
+                                                            <h4>Rick Jaffa</h4>
+                                                            <h2>Writer | Actor | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
-                              
+
                               <span>
                                         <div class="castmembers-details">
-                                                  <!-- this block of code is just for the alignment of the content  -->
-                                                  <!-- <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>J.K. Rowling</h4>
-                                                            <h2>Writer | Producer | Additional Crew</h2>
-                                                  </span> -->
+                                                            <h4>Amanda Silver</h4>
+                                                            <h2>Writer | Producer | Actress</h2>
+                                                  </span>
                                         </div>
                               </span>
                     </div>
@@ -178,26 +178,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Daniel Radcliffe</h4>
-                                                            <h2>As Harry Potter</h2>
+                                                            <h4>Freya Allan</h4>
+                                                            <h2>As Nova, Mae</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Rupert Grint</h4>
-                                                            <h2>As Ron Weasley</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Bonnie Wright</h4>
-                                                            <h2>As Ginny Weasley</h2>
+                                                            <h4>Owen Teague</h4>
+                                                            <h2>As Noa</h2>
                                                   </span>
                                         </div>
 
@@ -205,52 +197,28 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Emma Watson</h4>
-                                                            <h2>As Hermione Granger</h2>
+                                                            <h4>Kevin Durand</h4>
+                                                            <h2>As Proximus Caesar</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Ralph Fiennes</h4>
-                                                            <h2>As Lord Voldemort</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Maggie Smith</h4>
-                                                            <h2>As Professor Minerva McGonagall</h2>
+                                                            <h4>Peter Macon</h4>
+                                                            <h2>As Raka</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Kingdome-of-the-Planet-of-the-Apes.jpg" alt="">
                                                   <span>
-                                                            <h4>Alan Rickman</h4>
-                                                            <h2>As Professor Severus Snape</h2>
-                                                  </span>
-                                        </div>
-                                        
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Robbie Coltrane</h4>
-                                                            <h2>As Rubeus Hagrid</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Harry-Potter-7.2.jpg" alt="">
-                                                  <span>
-                                                            <h4>David Thewlis</h4>
-                                                            <h2>As Remus Lupin</h2>
+                                                            <h4>William H. Macy</h4>
+                                                            <h2>As Trevathan</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -280,11 +248,11 @@
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
                     </div>
+
           </div>
 
-
           <!-- <script src="app.js"></script> -->
-          <script src="/main/Video_playback/app_video.js" defer></script>
+          <script src="/main/Video_playback/app_video.js"></script>
 </body>
 
 </html>
